change to Java Configuration and add ExceptionHandler

--- a/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -25,12 +25,13 @@
       }
 
       th,td{
-          border-collapse: 1px solid #ddd;
+          border-bottom: 1px solid #ddd;
       }
     </style>
 </head>
 <body>
     <div id="root_container">
+         <!--/*@thymesVar id="book" type="java"*/-->
          <form method="post" th:action="@{/books/save}" th:object="${book}">
              <table>
                  <tr>
