add validation for bookSize

--- a/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -4,96 +4,98 @@
     <meta charset="UTF-8">
     <title>My book shelf</title>
     <style>
-      #root_container{
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-      }
+        #root_container {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
 
-      #books{
-          width: 50%;
-          border-collapse: collapse;
-      }
+        #books {
+            width: 50%;
+            border-collapse: collapse;
+        }
 
-      table{
-          margin: 25px;
-      }
+        table {
+            margin: 25px;
+        }
 
-      th{
-          text-align: left;
-      }
+        th {
+            text-align: left;
+        }
 
-      th,td{
-          border-bottom: 1px solid #ddd;
-      }
+        th, td {
+            border-bottom: 1px solid #ddd;
+        }
     </style>
 </head>
 <body>
-    <div id="root_container">
-         <!--/*@thymesVar id="book" type="java"*/-->
-         <form method="post" th:action="@{/books/save}" th:object="${book}">
-             <table>
-                 <tr>
-                     <td>
-                         <label>
-                             <input type="text" placeholder="author" th:field="*{author}">
-                         </label>
-                     </td>
-                     <td>
-                         <label>
-                             <input type="text" placeholder="book_title" th:field="*{title}">
-                         </label>
-                     </td>
-                     <td>
-                         <label>
-                             <input type="text" placeholder="size (page)" th:field="*{size}">
-                         </label>
-                     </td>
-                     <td>
-                         <input type="submit" placeholder="save">
-                     </td>
-                 </tr>
-             </table>
-          </form>
-        <form method="post" th:action="@{/books/remove}">
-            <table>
-                <tr>
-                    <td>
-                        <input type="text" placeholder="id number" th:name="bookIdToRemove">
-                        <input type="submit" value="remove">
-                    </td>
-                </tr>
-            </table>
-        </form>
-
-        <form method="post" th:action="@{/books/removeByRegex}">
-            <table>
-                <tr>
-                    <td>
-                        <input type="text" placeholder="regex" th:name="queryRegex"/>
-                    </td>
-                    <td>
-                        <input type="submit" value="remove by regex">
-                    </td>
-                </tr>
-            </table>
-        </form>
-
-        <table id="books">
+<div id="root_container">
+    <!--/*@thymesVar id="book" type="java"*/-->
+    <form method="post" th:action="@{/books/save}" th:object="${book}">
+        <table>
             <tr>
-                <th>id</th>
-                <th>author</th>
-                <th>title</th>
-                <th>size</th>
-            </tr>
-            <tr th:each="book : ${bookList}">
-                <td th:text="${book.id}"></td>
-                <td th:text="${book.author}"></td>
-                <td th:text="${book.title}"></td>
-                <td th:text="${book.size}"></td>
+                <td>
+                    <label>
+                        <input type="text" placeholder="author" th:field="*{author}">
+                    </label>
+                </td>
+                <td>
+                    <label>
+                        <input type="text" placeholder="book_title" th:field="*{title}">
+                    </label>
+                </td>
+                <td>
+                    <input type="text" placeholder="size (page)" th:field="*{size}">
+                     <p th:if="${#fields.hasErrors()}">field value must be digit and less than 4 signs</p>
+                </td>
+                <td>
+                    <input type="submit" placeholder="save">
+                </td>
             </tr>
         </table>
-    </div>
+    </form>
+    <form method="post" th:action="@{/books/remove}" th:object="${bookIdToRemove}">
+        <table>
+            <tr>
+                <td>
+                    <input type="text" placeholder="id number" th:field="*{id}">
+                    <input type="submit" value="remove">
+                </td>
+                <td th:if="${#fields.hasErrors()}">
+                    <p>Wrong id not found</p>
+                </td>
+            </tr>
+        </table>
+    </form>
+
+    <form method="post" th:action="@{/books/removeByRegex}">
+        <table>
+            <tr>
+                <td>
+                    <input type="text" placeholder="regex" th:name="queryRegex"/>
+                </td>
+                <td>
+                    <input type="submit" value="remove by regex">
+                </td>
+            </tr>
+        </table>
+    </form>
+
+    <table id="books">
+        <tr>
+            <th>id</th>
+            <th>author</th>
+            <th>title</th>
+            <th>size</th>
+        </tr>
+        <tr th:each="book : ${bookList}">
+            <td th:text="${book.id}"></td>
+            <td th:text="${book.author}"></td>
+            <td th:text="${book.title}"></td>
+            <td th:text="${book.size}"></td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
