--- a/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -47,10 +47,16 @@
                 </td>
                 <td>
                     <input type="text" placeholder="size (page)" th:field="*{size}">
-                     <p th:if="${#fields.hasErrors()}">field value must be digit and less than 4 signs</p>
+<!--                     <p th:if="${#fields.hasErrors()}">field value must be digit and less than 4 signs</p>-->
                 </td>
                 <td>
                     <input type="submit" placeholder="save">
+                </td>
+                <td th:if="${#fields.hasErrors()}">
+                    <p th:errors="*{author}"></p>
+                    <p th:errors="*{title}"></p>
+                    <p th:errors="*{size}"></p>
+<!--                    <p >Wrong id not found</p>-->
                 </td>
             </tr>
         </table>
@@ -63,7 +69,7 @@
                     <input type="submit" value="remove">
                 </td>
                 <td th:if="${#fields.hasErrors()}">
-                    <p>Wrong id not found</p>
+                    <p th:errors="*{id}"></p>
                 </td>
             </tr>
         </table>
@@ -77,6 +83,18 @@
                 </td>
                 <td>
                     <input type="submit" value="remove by regex">
+                </td>
+            </tr>
+        </table>
+    </form>
+    <form method="post" th:action="@{/books/uploadFile}" enctype="multipart/form-data">
+        <table>
+            <tr>
+                <td>
+                    <input type="file" name="file">
+                </td>
+                <td>
+                    <input type="submit" value="Upload">
                 </td>
             </tr>
         </table>
