--- a/src/main/webapp/WEB-INF/views/errors/500.html
+++ b/src/main/webapp/WEB-INF/views/errors/500.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Custom Book Shelf 500 Page (server error)</h1>
 <p th:text="${errorMessage}"></p>
-<a href="/simple_mvc_war_exploded/books/shelf">back to login page</a>
+<a href="/simple_mvc_war_exploded/books/shelf">back to books shelf page</a>
 </body>
 </html>
