--- a/MyBookShopAPP/src/main/resources/frontend/fragments/genres_tags_fragment.html
+++ b/MyBookShopAPP/src/main/resources/frontend/fragments/genres_tags_fragment.html
@@ -6,7 +6,8 @@
 <div class="Tags" th:class="${genres.id==1}?'Tags Tags_embed':'Tags'" th:fragment="tags">
     <div class="Tags-title">
         <div class="Tag" th:fragment="tag">
-            <a href="/genres/slug.html" th:href="@{/genres/{slug}(slug=${genres.slug})}" th:text="${genres.genresName + '(' + genres.booksCount + ')'}"
+            <a href="/genres/slug.html" th:href="@{/genres/{slug}(slug=${genres.slug})}"
+               th:text="${genres.genresName + '(' + genres.booksCount + ')'}"
             >Детективы<span class="undefined-amount">(10)</span></a>
         </div>
     </div >
